test/invalid/baseline/module.txt
Syntax error at line 4 in module.webidl, since `module gfx`:
  module geom {
  ^ Missing return type
